[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "langchain==0.3.27",
    "langchain-chroma==0.2.5",   # for ChromaDB vectorstore
    "langchain-community==0.3.29",      # for WebBaseLoader, PyPDFLoader, UnstructuredFileLoader
    "langchain-core==0.3.75",
    "langchain-mcp-adapters==0.1.9",
    "langchain-openai==0.3.32",
    "langchain-text-splitters==0.3.11",
    "beautifulsoup4>=4.12.2",          # for website scraping
    "requests>=2.32.0",                # for website HTTP requests
    "chromadb>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",
    "unstructured[csv,excel]>=0.12.0", # Updated: Added csv and excel extras
    "openpyxl>=3.1.0", # For Excel (.xlsx) document processing with Unstructured
    "tabulate>=0.9.0",  # For better table parsing, often useful with Unstructured for CSV/Excel
    "filetype>=1.2.0", # Replaced python-magic
    "langgraph-cli[inmem]>=0.2.8",     # for LangGraph server deployment
    "fastmcp==2.12.2",
    "jsonschema-path==0.3.4",
    "langchain-mcp-adapters==0.1.9",
    "mcp==1.13.1",
    "MCPTool==1.0.4",
    "pinecone==7.3.0",
    "pinecone-plugin-assistant==1.8.0",
    "pinecone-plugin-interface==0.0.7",
    "supabase==2.18.1",
    "supabase_auth==2.12.3",
    "supabase_functions==0.10.1",
    "isodate==0.7.2"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "agent"
"agent" = "agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
